# camera-pkg

./: .gitmodules  MANIFEST.in  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
dashboard/dashboard_ws2/src/dashboard/: setup.py
data/: sealer_peeler_photo.py
examples/: color_detect.py  plate_read_colors.py  video_receiver.py  video_sender.py
examples/pipette_detection/: video_receiver.py
node_editor/: plane.graph  test.py
node_editor/plugins/: plugin_input.py  plugin_numpy.py  plugin_typecast.py
rpl_cv/: fiducial.py
rpl_cv/core/: convenience.py  coord.py  feature.py  fiducial.py
rpl_cv/cv_methods/: get_colors.py
rpl_cv/dashboard/: .gitignore  README.md  dashboard_app.py
rpl_cv/dashboard/dashboard_ros_ws/: .gitignore
rpl_cv/dashboard/dashboard_ros_ws/install/: local_setup.sh  setup.sh
rpl_cv/dashboard/dashboard_ws2/: build_py_pubsub
rpl_cv/examples/: color_detect.ipynb  video_receiver.py  video_sender.py
rpl_cv/examples/pipette_detection/: video_sender.py
rpl_cv/methods/ot2/: plate_read_colors.py  plate_reader.py
rpl_cv/methods/pf400/: fiducial_position_in_image.py
rpl_cv/rpl_dashboard/: README.md
rpl_dashboard/: .gitignore  README.md  dashboard_app.py
rpl_dashboard/dashboard_ws2/: build_dashboard
rpl_flow_gui/: main.py  node.py  to-do.md  widget.py
rpl_flow_gui/plugins/: plugin_math.py  plugin_opencv.py  plugin_test.py
rpl_yolo/UnityPerceptionData/: README.md
rpl_yolo/dantes_code/: commands.md  conversion_json_to_yolo.py
unity_projects/: README.md
utils/: convenience.py  coords.py  network.py
(+30 files in other folders)
